Basic encrypted fumen import / export support

--- a/locales/zh-cn.ini
+++ b/locales/zh-cn.ini
@@ -40,6 +40,16 @@ ACT_FILE_OPEN = 打开...
 ACT_FILE_CLEAR_ITEMS = 清除谱面列表
 ACT_FILE_OPEN_CHART_DIRECTORY = 打开谱面文件夹
 ACT_FILE_SAVE_AS = 另存为...
+ACT_FILE_IMPORT_FROM = 导入自...
+ACT_FILE_IMPORT_FROM_SINGLE_FUMEN_CHART_RAW = 单个 Fumen 二进制文件
+ACT_FILE_IMPORT_FROM_MULTIPLE_FUMEN_CHART_RAW = 包含多个 Fumen 文件的文件夹
+ACT_FILE_IMPORT_FROM_SINGLE_FUMEN_CHART_NIJIIRO_ENCRYPTED = 单个 Fumen (虹版加密)
+ACT_FILE_IMPORT_FROM_MULTIPLE_FUMEN_CHART_NIJIIRO_ENCRYPTED = 包含多个 Fumen (虹版加密) 文件的文件夹
+ACT_FILE_EXPORT_TO = 导出到...
+ACT_FILE_EXPORT_TO_SINGLE_FUMEN_CHART_RAW = 单个 Fumen 二进制文件
+ACT_FILE_EXPORT_TO_MULTIPLE_FUMEN_CHART_RAW = 包含多个 Fumen 文件的文件夹
+ACT_FILE_EXPORT_TO_SINGLE_FUMEN_CHART_NIJIIRO_ENCRYPTED = 单个 Fumen (虹版加密)
+ACT_FILE_EXPORT_TO_MULTIPLE_FUMEN_CHART_NIJIIRO_ENCRYPTED = 包含多个 Fumen (虹版加密) 文件的文件夹
 ACT_SELECTION_REFINE = 筛选已选择物件
 ACT_SELECTION_SELECT_ALL = 全选
 ACT_SELECTION_SELECT_TO_CHART_END = 选择至谱面结尾
